[gd_scene load_steps=3 format=2]

[ext_resource path="res://Raleway-40.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Admin.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 50.0
margin_top = 35.0
margin_right = 286.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 1 )
text = "Admin Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 50.0
margin_top = 100.0
margin_right = 974.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="."]
margin_left = 684.0
margin_top = 34.0
margin_right = 804.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 1 )
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="."]
margin_left = 854.0
margin_top = 34.0
margin_right = 974.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 1 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
margin_left = 406.829
margin_top = 35.0
margin_right = 526.829
margin_bottom = 89.0
custom_fonts/font = ExtResource( 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Load" to="." method="loadPressed"]
[connection signal="pressed" from="Save" to="." method="savePressed"]
[connection signal="pressed" from="Play" to="." method="playPressed"]
